优化目录扫描的性能